# oxpipe

./: .gitignore  README.md  SPEC.md  pyproject.toml
configs/: profiles.default.yaml
eval/: fixtures.py
src/oxpipe/: __init__.py  __main__.py  cli.py  config.py
src/oxpipe/billing/: __init__.py  counterfactual.py  openai_tokens.py  savings.py
src/oxpipe/dashboard/: __init__.py  html.py  routes.py
src/oxpipe/events/: __init__.py  log.py
src/oxpipe/gate/: __init__.py  decide.py  estimate.py
src/oxpipe/proxy/: __init__.py  app.py  routes.py  upstream.py
src/oxpipe/render/: __init__.py  fonts.py  pages.py  profiles.py
src/oxpipe/runtime/: __init__.py  state.py
src/oxpipe/transform/: __init__.py  chat.py  common.py  factsheet.py  responses.py  split.py
tests/: test_billing.py  test_cli.py  test_dashboard.py  test_factsheet.py  test_proxy.py  test_render_gate.py  test_transform.py  test_unit_coverage.py
