[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oxpipe"
version = "0.1.0"
description = "OpenAI text-to-image context proxy for GPT-5.5 / GPT-5.6 (pxpipe analogue)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "oxpipe" }]
dependencies = [
  "httpx>=0.27",
  "pillow>=10.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "starlette>=0.37",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
oxpipe = "oxpipe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oxpipe"]

[tool.hatch.build.targets.wheel.sources]
"src/oxpipe" = "oxpipe"

[tool.hatch.build.targets.wheel.force-include]
"configs/profiles.default.yaml" = "oxpipe/profiles.default.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
